# rustynum

./: .gitignore  CLAUDE.md  COMPARISON_RUSTYNUM_VS_NDARRAY.md  Cargo.toml  Dockerfile  IMPROVEMENT_ROADMAP.md  README.md  SIMD_INTEGRATION_ANALYSIS.md  mkdocs.yml
.archive-rustynum-carrier/: Cargo.toml
.archive-rustynum-carrier/src/: cogrecord_v3.rs
.archive-rustynum-focus/: Cargo.toml
.archive-rustynum-focus/src/: lib.rs
.archive-rustynum-v1/: Cargo.toml
.archive-rustynum-v1/src/: lib.rs
.archive-rustynum-v3/: Cargo.toml
.archive-rustynum-v3/src/: cogrecord_v3.rs  lib.rs  phase.rs
.claude/prompts/: 01_clam_qualiacam_and_stable_simd.md  02_3d_wave_awareness_substrate_REFERENCE.md  03_zero_copy_fixes.md  04_feature_tier_restructuring.md  05_crystal_encoder_strategy.md  06_causal_research_prompt.md  07_lance_graph_notime_integration.md  08_four_ai_validation_synthesis.md  09_cross_repo_integration_map.md  10_lance_graph_fork_plan.md  11_deepnsm_crystal_pipeline.md  12_deepmsm_isomorphism.md  13_jaxpi_physics_informed_causal.md  14_pinn_rosetta_stone.md  15_two_punktlandung_sessions.md  16_concept_pipeline_rethink.md  17_four_questions_one_architecture.md  18_three_plane_lance_schema.md  19_organic_plasticity_model.md  20_thinking_style_substrate_routing.md  21_cross_substrate_coherence.md
.github/workflows/: rust.yml  test_python_bindings.yml
benchmarks/: numpy_comparison.py
benchmarks/comparison/: Cargo.toml
benchmarks/comparison/src/: main.rs
bindings/python/: Cargo.toml
bindings/python/rustynum/: __init__.py  functions.py  num_array_class.py
bindings/python/src/: array_f32.rs  array_f64.rs  array_u8.rs  cogrecord.rs  functions.rs  int8_gemm.rs  lib.rs
docs/: AVX512_TOOLCHAIN_AUDIT.md  BNN_PLAN.md  CAKES_paper.md  CAUSAL_TRAJECTORY_PAPER.md  CAUSAL_TRAJECTORY_TECHNICAL_MAPPING.md  CLAM_CHESS_CHAODA_Gap_Analysis.md  CLAM_Full_Gap_Analysis.md  COGNITIVE_ARCHITECTURE_RESEARCH_PLAN.md  CONSOLIDATED_OPEN_POINTS.md  CORE_EXPANSION_REQUEST.md  CROSS_PLANE_PAPER.md  CROSS_PLANE_TECHNICAL_MAPPING.md  ECOSYSTEM_HEALTH_DASHBOARD.md  ECOSYSTEM_TECHNICAL_MAP.md  EXPANSION_PLAN.md  IMPLEMENTATION_PR68_PR69.md  LADYBUG_INTEGRATION_IMPACT.md  NOVEL_CONTRIBUTIONS.md  PR23_debt_analysis.md  PR25_Review.md  PR27_Review.md  PR36_Review.md  PR37_Review.md  PR38_39_40_Review.md  PR41_Review.md  PR42_Review.md  RESEARCH_CONNECTIONS_DEEP_DIVE.md  RUSTYNUM_DEBT_LEDGER.md  RUSTYNUM_OPEN_DEBT.md  RUSTYNUM_STATE_OF_REPO.md  SCIENCE_INTEGRATION_MAP.md  SCIENTIFIC_PAPERS_CATALOG.md  SIGMA_SIGNIFICANCE_PAPER.md  SIGMA_SIGNIFICANCE_TECHNICAL_MAPPING.md  STABLE_INTEGRATION_PLAN.md  holographic-oracle.md  index.md  installation.md  optimizations.md  panCAKES_paper.md  (+2 more)
docs/api/: index.md
docs/benchmarks/: rustynum-vs-numpy.md
docs/tutorials/: better-matrix-operations.md  index.md  replacing-numpy-for-faster-analytics.md  streamlining-machine-learning-preprocessing.md
jitson/: Cargo.toml
jitson/benches/: jit_bench.rs
jitson/src/: detect.rs  engine.rs  ir.rs  lib.rs  scan_jit.rs
jitson/tests/: scan_correctness.rs
qualia_xor/: Cargo.toml  crew_config.json  eineindeutigkeit_jina.py  neo4j_import.cypher  syntax_contract.cypher  vsa_distances.json
qualia_xor/src/: eineindeutigkeit_results.json  jina_embeddings_1024.npy  main.rs  qualia_219.json
rustyblas/: Cargo.toml
rustyblas/benches/: blas_benchmarks.rs
rustyblas/examples/: gemm_benchmark.rs
rustyblas/src/: bf16_gemm.rs  int8_gemm.rs  level1.rs  level2.rs  level3.rs  lib.rs
rustymkl/: Cargo.toml
rustymkl/benches/: mkl_benchmarks.rs
rustymkl/src/: fft.rs  lapack.rs  lib.rs  vml.rs
rustynum-archive/: Cargo.toml
rustynum-archive-v3/: Cargo.toml
rustynum-archive-v3/src/: cogrecord_v3.rs  lib.rs  phase.rs
rustynum-archive/src/: binding_matrix.rs  cogrecord.rs  graph.rs  hdc.rs  lib.rs  projection.rs
rustynum-arrow/: Cargo.toml
rustynum-arrow/src/: arrow_bridge.rs  channel_index.rs  datafusion_bridge.rs  fragment_index.rs  horizontal_sweep.rs  indexed_cascade.rs  lance_io.rs  lib.rs  three_plane.rs
rustynum-bnn/: Cargo.toml
rustynum-bnn/src/: belichtungsmesser.rs  bnn.rs  causal_trajectory.rs  cross_plane.rs  lib.rs  rif_net_integration.rs
rustynum-carrier/: Cargo.toml
rustynum-carrier/src/: carrier.rs  cogrecord_v3.rs  lib.rs  phase.rs
rustynum-clam/: Cargo.toml
rustynum-clam/src/: compress.rs  lib.rs  qualia_cam.rs  search.rs  semantic_protocol.rs  tree.rs
rustynum-core/: Cargo.toml
rustynum-core/src/: bf16_hamming.rs  blackboard.rs  bnn.rs  cam_index.rs  causality.rs  compute.rs  delta.rs  dn_tree.rs  fingerprint.rs  graph_hv.rs  hybrid.rs  jit_scan.rs  jitson.rs  kernels.rs  layer_stack.rs  layout.rs  lib.rs  mkl_ffi.rs  organic.rs  parallel.rs  prefilter.rs  qualia_cam.rs  qualia_gate.rs  rng.rs  simd.rs  simd_avx2.rs  simd_compat.rs  soaking.rs  spatial_resonance.rs  substrate.rs  tail_backend.rs
rustynum-core/src/backends/: gemm.rs  mod.rs  popcnt.rs  xsmm.rs
rustynum-focus/: Cargo.toml
rustynum-focus/src/: carrier.rs  cogrecord_v3.rs  lib.rs
rustynum-gpu/: Cargo.toml
rustynum-gpu/src/: device.rs  dispatch.rs  lib.rs  stroke1.wgsl  traits.rs
rustynum-gpu/src/backends/: cpu.rs  cuda_backend.rs  level_zero.rs  mod.rs  stroke1.wgsl  wgpu_backend.rs
rustynum-holo/: Cargo.toml
rustynum-holo/src/: carrier.rs  delta_layer.rs  focus.rs  holo_search.rs  holograph.rs  lib.rs  lod_pyramid.rs
rustynum-oracle/: Cargo.toml
rustynum-oracle/src/: aiwar_ghost.rs  ghost_discovery.rs  lib.rs  linalg.rs  nars.rs  oracle.rs  organic.rs  recognize.rs  sweep.rs
rustynum-rs/: Cargo.toml
rustynum-rs/benches/: array_benchmarks.rs  hdc_benchmarks.rs
rustynum-rs/src/: lib.rs  traits.rs
rustynum-rs/src/num_array/: array_struct.rs  binding_matrix.rs  bitwise.rs  cogrecord.rs  constructors.rs  graph.rs  hdc.rs  linalg.rs  manipulation.rs  mod.rs  operations.rs  projection.rs  statistics.rs  view.rs
rustynum-rs/src/simd_ops/: mod.rs
rustynum-rs/tests/: integration_tests.rs
