[workspace]
resolver = "2"
members = [
    "rustynum-core",
    "rustynum-rs",
    "rustyblas",
    "rustymkl",
    "rustynum-arrow",
    "rustynum-holo",
    "rustynum-archive",
    "rustynum-archive-v3",
    "rustynum-carrier",
    "rustynum-focus",
    "rustynum-oracle",
    "rustynum-clam",
    "bindings/python",
]
# jitson excluded: requires path deps on AdaWorldAPI/wasmtime fork (../../wasmtime/cranelift/*)
# which is a separate local clone, not available in CI. Build with:
#   cargo build --manifest-path jitson/Cargo.toml
exclude = ["jitson"]

[workspace.package]
rust-version = "1.93"
