[workspace]
resolver = "2"
members = [
    "rustynum-core",
    "rustynum-rs",
    "rustyblas",
    "rustymkl",
    "rustynum-arrow",
    "rustynum-holo",
    "rustynum-archive",
    "rustynum-archive-v3",
    "rustynum-carrier",
    "rustynum-focus",
    "rustynum-oracle",
    "rustynum-clam",
    "bindings/python",
    "qualia_xor",
]
# NOTE: jitson/ is NOT a workspace member — it depends on AdaWorldAPI/wasmtime
# Cranelift fork (AVX-512 JIT) which pulls in the full wasmtime workspace.
# Build locally: cargo build --manifest-path jitson/Cargo.toml
# Do NOT add exclude = ["jitson"] — that causes Cargo to read its deps.

[workspace.package]
rust-version = "1.93"
