[package]
name = "jitson"
version = "0.1.0"
edition = "2021"
description = "JSON/YAML config → native function pointers via Cranelift JIT. Your config IS the code."
license = "MIT"

[dependencies]
# Cranelift JIT compiler infrastructure
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
target-lexicon = "0.13"

# Serialization (for JSON/YAML config parsing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CPU feature detection (reuse rustynum-core)
rustynum-core = { path = "../rustynum-core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "jit_bench"
harness = false
