[package]
name = "jitson"
version = "0.1.0"
edition = "2021"
description = "JSON/YAML config → native function pointers via Cranelift JIT. Your config IS the code."
license = "MIT"

[dependencies]
# Cranelift JIT compiler infrastructure — uses patched wasmtime fork
# with full AVX-512 support (VPOPCNTDQ, VNNI, VPTERNLOG, BITALG).
# Commit 5c5086fc1 in AdaWorldAPI/wasmtime adds:
#   - avx512bw, avx512vpopcntdq, avx512vnni, avx512ifma feature flags
#   - VPOPCNTD/VPOPCNTQ, VPDPBUSD, VPTERNLOGD instructions
#   - Sapphire Rapids / Granite Rapids microarchitecture presets
cranelift-codegen = { path = "../../wasmtime/cranelift/codegen" }
cranelift-frontend = { path = "../../wasmtime/cranelift/frontend" }
cranelift-jit = { path = "../../wasmtime/cranelift/jit" }
cranelift-module = { path = "../../wasmtime/cranelift/module" }
target-lexicon = "0.13"

# Serialization (for JSON/YAML config parsing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CPU feature detection (reuse rustynum-core)
rustynum-core = { path = "../rustynum-core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "jit_bench"
harness = false
