[package]
name = "qualia-xor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Core compute — SIMD kernels, σ-significance, SPO encoding
rustynum-core = { path = "../rustynum-core" }

[[bin]]
name = "edge-vectors"
path = "src/bin/edge_vectors.rs"

[[bin]]
name = "cypher-vsa"
path = "src/bin/cypher_vsa.rs"

[[bin]]
name = "hydrate-agents"
path = "src/bin/hydrate_agents.rs"
