[package]
name = "rustymkl"
version = "0.1.0"
edition = "2021"
description = "Pure Rust MKL replacement — LAPACK, FFT, VML with AVX-512/AVX2 SIMD"

[features]
default = ["avx512"]
avx512 = ["rustynum-core/avx512", "rustyblas/avx512"]
avx2 = ["rustynum-core/avx2", "rustyblas/avx2"]

[dependencies]
rustynum-core = { path = "../rustynum-core", features = ["avx512"] }
rustyblas = { path = "../rustyblas", features = ["avx512"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mkl_benchmarks"
harness = false
