[package]
name = "rustynum-archive"
version = "0.1.0"
edition = "2021"
description = "Archive of CogRecord v1 binary-only model: HDC primitives, VerbCodebook, SimHash, 3D binding matrix. Preserved before phase-space upgrade."

[features]

[dependencies]
rustynum-rs = { path = "../rustynum-rs" }

[dev-dependencies]
