[package]
name = "rustynum-arrow"
version = "0.1.0"
edition = "2021"
description = "Optional Arrow/Lance bridge for rustynum — zero-copy NumArray ↔ Arrow, CogRecord ↔ Lance dataset"
rust-version = "1.82.0"

[features]
default = ["arrow"]
arrow = ["dep:arrow"]
datafusion = ["dep:datafusion", "dep:tokio", "dep:futures", "arrow"]
lance = ["dep:lance", "dep:tokio", "dep:futures", "arrow"]

[dependencies]
rustynum-rs = { path = "../rustynum-rs" }
rustynum-core = { path = "../rustynum-core", features = ["avx512"] }
arrow = { version = "57", optional = true, default-features = false, features = [
    "ffi",
] }
datafusion = { version = "51", optional = true, default-features = false }
lance = { version = "2", optional = true, default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
futures = "0.3"
