[package]
name = "rustynum-core"
version = "0.1.0"
edition = "2021"
description = "Shared SIMD primitives and zero-copy blackboard for rustynum ecosystem"

[features]
default = ["avx512"]
# AVX-512: f32x16, f64x8, u8x64 — servers/cloud (Sapphire Rapids, EPYC, etc.)
# Default ON. Runtime dispatch falls back: VPOPCNTDQ → AVX2 Harley-Seal → scalar POPCNT.
avx512 = []
# AVX2: f32x8, f64x4, u8x32 — laptops/desktops (Haswell+)
# For AVX2-only builds: default-features = false, features = ["avx2"]
avx2 = []

[dependencies]

[dev-dependencies]
