[package]
name = "rustynum-rs"
version = "0.1.0"
edition = "2021"

[features]
mkl = ["rustymkl/mkl"]

[dependencies]
rustynum-core = { path = "../rustynum-core", features = ["avx512"] }
rustyblas = { path = "../rustyblas", features = ["avx512"] }
rustymkl = { path = "../rustymkl", features = ["avx512"] }

[dev-dependencies]
criterion = "0.3"
ndarray = "0.16.1" 
nalgebra = "0.33.0"

[[bench]]
name = "array_benchmarks"
harness = false  # Allows Criterion to control the benchmarking process

[[bench]]
name = "hdc_benchmarks"
harness = false