[package]
name = "rustynum"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rustynum"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rustynum-rs = { path = "../../rustynum-rs" }
rustynum-core = { path = "../../rustynum-core", features = ["avx512"] }
rustyblas = { path = "../../rustyblas", features = ["avx512"] }

[profile.release]
lto = true
strip = true
panic = "abort"